<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">Add</string>
    <string name="amazon">Amazon</string>
    <string name="app_name">TV Tracker</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backdrop">Backdrop</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="browser">Browser</string>
    <string name="cast">Cast</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check">Check</string>
    <string name="chevron">Chevron</string>
    <string name="custom">Custom</string>
    <string name="date_active">Date Active</string>
    <string name="default_string">Default</string>
    <string name="description_currently_unavailable">Description Currently Unavailable</string>
    <string name="details">Details</string>
    <string name="episode_still">Episode Still</string>
    <string name="expand_button_title">Advanced</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook">Facebook</string>
    <string name="genres">Genres</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="high_res_backdrop_url">https://image.tmdb.org/t/p/w1280</string>
    <string name="high_res_poster_url">https://image.tmdb.org/t/p/w342</string>
    <string name="high_res_profile_url">https://image.tmdb.org/t/p/w185</string>
    <string name="high_res_still_url">https://image.tmdb.org/t/p/w300</string>
    <string name="instagram">Instagram</string>
    <string name="launch">Launch</string>
    <string name="launch_id">Launch ID</string>
    <string name="launch_settings">Launch Settings</string>
    <string name="low_res_backdrop_url">https://image.tmdb.org/t/p/w300</string>
    <string name="low_res_poster_url">https://image.tmdb.org/t/p/w92</string>
    <string name="low_res_profile_url">https://image.tmdb.org/t/p/w45</string>
    <string name="low_res_still_url">https://image.tmdb.org/t/p/w92</string>
    <string name="menu">Menu</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="netflix">Netflix</string>
    <string name="network">Network</string>
    <string name="no_search_results">No Search Results</string>
    <string name="overview">Overview</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="poster">Poster</string>
    <string name="profile">Profile</string>
    <string name="rating">Rating</string>
    <string name="recommended">Recommended</string>
    <string name="runtime">Runtime</string>
    <string name="schedule">Schedule</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for a Show</string>
    <string name="search_menu_title">Search</string>
    <string name="search_results">Search Results</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="show">Show</string>
    <string name="shows">Shows</string>
    <string name="similar">Similar</string>
    <string name="status">Status</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="tmdb">TMDb</string>
    <string name="top_rated">Top Rated</string>
    <string name="trending">Trending</string>
    <string name="twitter">Twitter</string>
    <string name="upcoming">Upcoming</string>
    <string name="update_log">Update Log</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="watch_list">Watch List</string>
    <string name="website">Website</string>
</resources>
