<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="104dp"
        android:translationZ="@dimen/elevation">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutDescription="@xml/fragment_details_header_scene">

                <ImageView
                    android:id="@+id/backdrop_image_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/backdrop"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@id/name_text_view"
                    app:layout_constraintDimensionRatio="@string/backdrop_ratio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/poster_image_view_holder"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:translationY="0dp"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:layout_constraintBottom_toBottomOf="@id/name_text_view"
                    app:layout_constraintDimensionRatio="2:3"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/poster_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/poster"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/backgrounds/scenic" />

                </com.google.android.material.card.MaterialCardView>

                <View
                    android:id="@+id/name_text_view_background"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/toolbar_height"
                    android:alpha="1"
                    android:background="?android:colorBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/toolbar_height"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/poster_image_view_holder"
                    app:layout_constraintTop_toBottomOf="@id/backdrop_image_view"
                    tools:text="The Flash" />

            </androidx.constraintlayout.motion.widget.MotionLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:background="@null"
                android:outlineProvider="none"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            app:tabGravity="fill"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp" />
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:translationY="72dp"
        app:elevation="@dimen/elevation"
        app:maxImageSize="32dp"
        app:srcCompat="@drawable/ic_plus"
        app:tint="#FFFFFF" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
